[project]
name = "what_if"
version = "0.1.0"
description = "What If ... Iron Man had not snapped?"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mako>=1.3.10",
    "pyramid>=2.0.2",
    "pyramid-mako>=1.1.0",
    "waitress>=3.0.2",
]


[project.scripts]
what-if = "what_if:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/what_if"]

[tool.hatch.build.targets.sdist]
packages = ["src/what_if"]